# kea

./: .gitignore  Cargo.toml
config/: kea.yml
shaders/: rect_frag.glsl  rect_vert.glsl  text_frag.glsl  text_vert.glsl
src/: kea.rs  lib.rs  main.rs
src/app/: application.rs  config.rs  event_handler.rs  mod.rs
src/core/: buffer.rs  edit.rs  mod.rs  view.rs
src/core/rope/: mod.rs
src/font/: mod.rs
src/renderer/: color.rs  mod.rs  rect.rs  renderer.rs  style.rs  window.rs
src/renderer/platform/: atlas.rs  mod.rs  shader.rs
src/ui/: edits.rs  frame.rs  key_bindings.rs  layout.rs  line_cache.rs  mod.rs
