[package]
name = "kea"
version = "0.1.0"
authors = ["Andrew Bregger <adb3649@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.1.0"
serde = "1.0.106"
serde_yaml = "0.8.11"
chrono = "0.4.0"
log = "0.4"
fern = "0.5"
glutin = "0.24"
gl = "0.14"
thiserror = "1.0.16"
#arogreetype-rs = "0.26.0"
font-kit = "0.8.0"
pathfinder_geometry = "^0.5"

# [dependencies.font-kit]
# version = "0.8.0"
# default-features = false
# features = ["source"]
